<resources>
    <string name="app_name">Weatherscope</string>
    <!--    API key of google maps  -->
    <string name="google_map_api_key">AIzaSyBwiL5csf8_IqvyWaxYbzT6Qv1WCnKEKGE</string>
    <!--    TODO Next Tow line -->
    <string name="open_nav">Open Weatherscope</string>
    <string name="close_nav">Close Weatherscope</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempTxt">19°C</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultraViolet">Ultra Violet</string>
    <string name="visability">Visibility</string>
    <string name="sunDay">Sun Day</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="Location">Location</string>
    <string name="Arabic">العربية</string>
    <string name="English">English</string>
    <string name="Language">Language</string>
    <string name="Notifications">Notifications</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Notificationes">Notifications</string>
    <string name="Temperature">Temperature</string>
    <string name="meterVsSec">meter / Sec</string>
    <string name="mileVsHour">mile / Hour</string>
    <string name="EvsD">Enable</string>
    <string name="Disable">Disable</string>
    <string name="Celsius">Celsius</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Fahrenheit">Fahrenheit</string>

</resources>