<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".view.viewSetting.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/locationCardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#F2FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxGBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/GPS"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/Map"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/checkBoxGBS"
                app:layout_constraintStart_toStartOf="@+id/checkBoxGBS"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxGBS" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B3FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/locationCardView"
        app:layout_constraintEnd_toEndOf="@+id/locationCardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/locationCardView"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B3FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/LanguageCardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F2FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/Arabic"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/English"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/checkBoxArabic"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxArabic" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Temperature"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F2FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxMeterVsSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/meterVsSec"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxMileVsHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/mileVsHour"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/checkBoxMeterVsSec"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxMeterVsSec" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B3FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/locationCardView"
        app:layout_constraintStart_toStartOf="@+id/locationCardView"
        app:layout_constraintTop_toBottomOf="@+id/locationCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WindSpeed"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B3FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/Temperature"
        app:layout_constraintTop_toBottomOf="@+id/Temperature">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notificationes"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F2FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/EvsD"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxDisable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/Disable"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/checkBoxEnable"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxEnable" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B3FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/LanguageCardView"
        app:layout_constraintStart_toStartOf="@+id/LanguageCardView"
        app:layout_constraintTop_toBottomOf="@+id/LanguageCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temperature"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F2FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView7"
        app:layout_constraintStart_toStartOf="@+id/cardView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxCelsuis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/Celsius"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxKelvin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:buttonTint="@color/lavender"
                android:text="@string/Kelvin"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/checkBoxCelsuis"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxCelsuis" />

            <CheckBox
                android:id="@+id/checkBoxFahrenheight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/lavender"
                android:text="@string/Fahrenheit"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/checkBoxKelvin"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxKelvin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>